--- a/Tweeter/Modules/Chat/View/ChatViewController.storyboard
+++ b/Tweeter/Modules/Chat/View/ChatViewController.storyboard
@@ -83,9 +83,19 @@
                             </collectionView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3hD-7r-HIQ" userLabel="actionbar">
                                 <rect key="frame" x="0.0" y="20" width="375" height="48"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TwitSplit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h6E-oW-dHJ">
+                                        <rect key="frame" x="153" y="13.5" width="69" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="h6E-oW-dHJ" firstAttribute="centerX" secondItem="3hD-7r-HIQ" secondAttribute="centerX" id="Ovc-zC-QSs"/>
                                     <constraint firstAttribute="height" constant="48" id="RRo-Hu-pwz"/>
+                                    <constraint firstItem="h6E-oW-dHJ" firstAttribute="centerY" secondItem="3hD-7r-HIQ" secondAttribute="centerY" id="bHM-iX-FrU"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="size" keyPath="layer.shadowOffset">
@@ -122,7 +132,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="255" verticalCompressionResistancePriority="755" bounces="NO" scrollEnabled="NO" bouncesZoom="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="qE0-k0-3sE">
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="255" verticalCompressionResistancePriority="755" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" bouncesZoom="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="qE0-k0-3sE">
                                         <rect key="frame" x="8" y="3" width="307" height="35.5"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -164,7 +174,6 @@
                                     <constraint firstItem="av2-va-tCD" firstAttribute="centerY" secondItem="Pm9-SD-p1Z" secondAttribute="centerY" id="U4q-GX-Ee5"/>
                                     <constraint firstItem="a8R-Wo-SOZ" firstAttribute="bottom" secondItem="qE0-k0-3sE" secondAttribute="bottom" id="UP4-fu-Gp1"/>
                                     <constraint firstItem="FXy-UR-oK4" firstAttribute="leading" secondItem="Pm9-SD-p1Z" secondAttribute="leading" id="UfA-d8-Wu8"/>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="120" id="WAm-iR-ZZU"/>
                                     <constraint firstItem="a8R-Wo-SOZ" firstAttribute="centerY" secondItem="Pm9-SD-p1Z" secondAttribute="centerY" id="YIK-yZ-Xyl"/>
                                     <constraint firstAttribute="trailing" secondItem="6jo-2G-KkD" secondAttribute="trailing" constant="8" id="Z48-UY-Rcm"/>
                                     <constraint firstItem="a8R-Wo-SOZ" firstAttribute="leading" secondItem="Pm9-SD-p1Z" secondAttribute="leading" constant="12" id="a6H-A6-VUG"/>
